--- a/multer/index.html
+++ b/multer/index.html
@@ -80,8 +80,7 @@ button:hover {
 </body>
 </html>
 <script>
-   // https://multervijaynimar.onrender.com/upload
-    fetch('http://localhost:2001/upload', {
+    fetch('https://multervijaynimar.onrender.com/upload', {
         method: 'POST',
         body: formData
     })
